--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "format": "prettier --write '{src,test}/**/*.{js,jsx,json,css}'",
+    "format:check": "prettier --list-different \"{src,test}/**/*.js\"",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "prettier": "^1.12.1"
   }
 }
