--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,31 @@
 version: 2
 jobs:
-  build:
+  backend_format:
     docker:
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.7
     steps:
       - checkout
-      - run: echo "Hello" 
+      - run:
+        command: |
+          cd backend
+          pipenv install --skip-lock
+          pipenv install --skip-lock --dev
+          pipenv run black . --check 
+  backend_test:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout
+      - run:
+        command: |
+          cd backend
+          pipenv install --skip-lock
+          pipenv install --skip-lock --dev
+          pipenv run pytest
+
+workflows:
+  version: 2
+  build-test:
+    jobs:
+      - backend_format
+      - backend_test
