Dropdown component + initial SearchPage with Redux #11 #12 (#11)
* [WIP] Dropdown + SearchPage

* Fixed formatting issues

* Initial redux set-ups, some bugs with updating

* Fix of redux delay and dropdown switch statement

* format fix

* Add package.json to commit

* Remove extra dependencies

* Remove dropdown switch statement

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "2.0.3",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
@@ -23,7 +24,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "prettier": "^1.12.1",
+    "prettier": "^1.14.3",
     "redux-devtools": "^3.4.1"
   },
   "browserslist": [
