--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,18 @@
-FROM python:3.7
-LABEL maintainer "Timothy Ko <tk2@illinois.edu>"
+FROM python:3.7-alpine as build
+LABEL maintainer "Angad Garg <angad.garg3@gmail.com>"
 
-COPY . /app
-WORKDIR /app
+COPY Pipfile Pipfile.lock ./
+RUN apk update && \
+    apk add --virtual build-deps gcc musl-dev && \
+    apk add postgresql-dev && \
+    rm -rf /var/cache/apk/*
+
 RUN pip install pipenv
 RUN pipenv install --system
 
+RUN apk del build-deps gcc musl-dev && pip uninstall -y pipenv
+COPY . /app
+WORKDIR /app
+ENV FLASK_ENV=prod
 EXPOSE 5000
+ENTRYPOINT [ "gunicorn", "-b", "0.0.0.0:5000", "--log-level", "INFO", "manage:app" ]
