--- a/backend/Dockerfile-dev
+++ b/backend/Dockerfile-dev
@@ -3,8 +3,7 @@ LABEL maintainer "Angad Garg <angad.garg3@gmail.com>"
 
 COPY . /app
 WORKDIR /app
-RUN pip install pipenv
-RUN pipenv install --system
+RUN pip install -r requirements.txt
 
 ENV FLASK_ENV=docker
 EXPOSE 5000
