--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#8fb95f",
   "background_color": "#8fb95f"
