--- a/backend/now.json
+++ b/backend/now.json
@@ -5,5 +5,8 @@
   "features": {
     "cloud": "v2"
   },
-  "alias": "h4i-childs-play-backend.now.sh"
+  "alias": "h4i-childs-play-backend.now.sh",
+  "env": {
+    "DATABASE_URL": "@cp-app-postgres"
+  }  
 }
