--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "node-sass": "^4.9.4",
-    "react": "^16.5.2",
+    "query-string": "^6.2.0",
+    "react": "^16.6.3",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-dropzone": "^6.2.3",
     "react-redux": "^5.0.7",
