--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.9.6
+celery==4.2.1
 flake8==3.5.0
 Flask==0.12.2
 Flask-Migrate==2.1.1
@@ -12,6 +13,7 @@ requests-mock==1.5.2
 SQLAlchemy==1.1.14
 urllib3==1.22
 Flask-Cors==3.0.3
+redis==3.0.1
 sqlalchemy-utils==0.33.5
 typing==3.6.6
 xlrd==1.1.0
