--- a/frontend/now.json
+++ b/frontend/now.json
@@ -1,5 +1,5 @@
 {
   "name": "childs-play-frontend",
   "type": "npm",
-  "alias": "h4i-childs-play-frontend.now.sh"
+  "alias": "h4i-childs-play.now.sh"
 }
