--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,3 +1,3 @@
-web: gunicorn api:app
+web: gunicorn manage:app
 worker: python manage.py runworker
 worker: celery worker -A celery-worker.celery --loglevel=info
