frontend deploy fixes

--- a/frontend/now.json
+++ b/frontend/now.json
@@ -1,5 +1,8 @@
 {
   "name": "childs-play-frontend",
   "type": "npm",
-  "alias": "h4i-childs-play.now.sh"
+  "alias": "h4i-childs-play.now.sh",
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
